Add styles for small screens in portrait orientation.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 </head>
 <body>
-  <header class="header">
-    <img class="header__logo" src="./assets/images/logo.svg" alt="Base Apparel Logo">
-  </header>
-  <main>
-    <section class="hero">
-      <img class="hero__image" src="./assets/images/hero-mobile.jpg" alt="">
+  <main class="hero">
+    <img class="hero__logo" src="./assets/images/logo.svg" alt="Base Apparel">
+    <img class="hero__image" src="./assets/images/hero-mobile.jpg" alt="">
+    <section class="hero__text-content">
       <h1 class="hero__title">
         <span class="light-font">
           We're<br>
@@ -27,7 +25,7 @@
         Hello fellow shoppers! We're currently building our new fashion store.
         Add your email below to stay up-to-date with announcements and our launch deals.
       </p>
-      <form class="hero__form form">
+      <form class="form" novalidate="true">
         <input
           type="text"
           class="form__input"
@@ -35,9 +33,9 @@
           pattern="^([A-Za-z\d.-]+)@([a-z\d]+)(\.[a-z]{2,24}){1,8}$"
           required
         >
-        <img class="form__error-icon" src="./assets/images/" alt="">
-        <button class="form__button" type="submit">
-          <img src="./assets/images/icon-arrow.svg" alt="Arrow Icon">
+        <img class="form__error-icon" src="./assets/images/icon-error.svg" alt="">
+        <button class="form__button button" type="submit">
+          <img class="button__icon" src="./assets/images/icon-arrow.svg" alt="Arrow Icon">
         </button>
       </form>
     </section>
