Minor fixes for logo and it's container.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
   <main class="hero">
-    <img class="hero__logo" src="./assets/images/logo.svg" alt="Base Apparel">
+    <div class="hero__logo-container">
+      <img class="hero__logo" src="./assets/images/logo.svg" alt="Base Apparel">
+    </div>
     <img class="hero__image" src="./assets/images/hero-mobile.jpg" alt="">
     <section class="hero__text-content">
       <h1 class="hero__title">
