Add styles for bigger screens

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
   <main class="hero">
-    <div class="hero__logo-container">
-      <img class="hero__logo" src="./assets/images/logo.svg" alt="Base Apparel">
-    </div>
-    <img class="hero__image" src="./assets/images/hero-mobile.jpg" alt="">
-    <section class="hero__text-content">
+    <section class="hero__primary-content">
+      <div class="hero__logo-container">
+        <img class="hero__logo" src="./assets/images/logo.svg" alt="Base Apparel">
+      </div>
+      <img class="hero__image image--mobile" src="./assets/images/hero-mobile.jpg" alt="">
       <h1 class="hero__title">
         <span class="light-font">
           We're<br>
@@ -41,6 +41,7 @@
         </button>
       </form>
     </section>
+    <img class="hero__image image--desktop" src="./assets/images/hero-desktop.jpg" alt="">
   </main>
   <footer class="footer">
     <p class="attribution">
