Create index.js script file

--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
       Challenge by <a	class="attribution__anchor"	href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a class="attribution__anchor" href="https://github.com/Samolote" target="_blank">Samolote</a>.
     </p>
   </footer>
+  <script src="index.js"></script>
 </body>
 </html>
