Set proper input type.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </p>
       <form class="form" novalidate="true">
         <input
-          type="text"
+          type="email"
           class="form__input"
           placeholder="Email Address"
           pattern="^([A-Za-z\d.-]+)@([a-z\d]+)(\.[a-z]{2,24}){1,8}$"
